Correct the error object link color in dark mode. https://bugs.webkit.org/show_bug.cgi?id=198033
Patch by Zhifei Fang <zhifei_fang@apple.com> on 2019-06-19
Reviewed by Devin Rousso.

* UserInterface/Views/ErrorObjectView.css:
(@media (prefers-dark-interface)):
(.error-object-link-container):

Canonical link: https://commits.webkit.org/212992@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@246601 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/Source/WebInspectorUI/UserInterface/Views/ConsoleMessageView.css
+++ b/Source/WebInspectorUI/UserInterface/Views/ConsoleMessageView.css
@@ -320,4 +320,13 @@ body[dir=rtl] .console-message.expandable .console-top-level-message::before {
     .console-message .repeat-count {
         background-color: hsl(218, 70%, 48%);
     }
+
+    .console-message .go-to-link {
+        color: var(--text-color-secondary);
+    }
+
+    .console-message .go-to-link:hover,
+    .console-message .go-to-link:focus {
+        color: var(--selected-secondary-text-color-active);
+    }
 }
